fix input filed no visible

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  input {
+    @apply border border-gray-500 px-4 py-2 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-teal-500;
+  }
+}
